# final_updated

./: .gitignore  README.md  README_AGENT.md  STATUS.md  app.py  cli.py  model_registry_documentation.md  only.md  package.json  pyproject.toml  requirements.txt  shawn_features.txt  status_check.py  system_overview.html  test_api_chat.py  test_endpoints.py  test_mcp_tts.py  test_results.json  test_server.bat
admin/: Comment.html
agents/: blog_writer.yaml  blog_writer_bn.yaml  groq_agent.yaml  instruct_agent.yaml  lmstudio_agent.yaml  ollama_agent.yaml  openrouter_agent.yaml  profile_zombie.json  programming_agent.yaml
ai/: README.md
api/: admin_routes.py  agent_api.py  app.py  dispatcher_api.py  docs_api.py  license_api.py  status_check.py  voice_api.py
backup/: auto_db_backup.sh  drive_backup.py  gdrive_uploader.py  local_db_backup.sh  restore.py
cli/: cli_spell_corrector.py  smart_suggest.py
core/: dispatcher.py  fallback_engine.py  fallback_router.py  token_handler.py  token_manager.py
database/: kook_full_db.sql
demo/: README.md  run_demo.py
dispatcher/: context_router.py  core.py  face_matcher.py  fallback.py  local_model_checker.py  model_loader.py  productivity_agent.py  project_loader.py
docs/: android_studio.html  android_studio_integration.md  api_spec.yaml  api_usage.html  architecture.html  code_review_checklist.md  demo_script.md  dev_manual.md  editor_integration.html  home_bn.md  models.html  multi_project_usage.md  productivity_module.md  project _overview.html  purpose.html  services.html  status_and_next_steps.md  test_cases.md
(+239 files in other folders)
